--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -36,14 +36,31 @@
             @Html.HiddenFor(x => x.Section.Id)
             @Html.HiddenFor(x => x.Section.Folio)
         }
-        <div class="col-12 d-flex">
-            <input asp-for="Section.IsEmpty" class="form-check my-auto mr-1" type="checkbox">
-            <label asp-for="Section.IsEmpty" class="form-label my-auto size-14">MARCAR TRAMO COMO VACÍO</label>
-        </div>
-        <div class="col-6">
-            <label asp-for="Section.ClientesId" class="form-label">CLIENTE</label>
-            <select asp-for="Section.ClientesId" asp-items="Model.Selects.Customers" data-val="true" data-val-required="The Person field is required." class="form-select" onchange="GetCustomerOD(this.value), GetClientReferences(this.value)" required></select>
-        </div>
+
+        @if (Model.Section.Id == 0 && !Model.Section.IsEmpty)
+        {
+            <div class="col-12 d-flex">
+                <input asp-for="Section.IsEmpty" class="form-check my-auto mr-1" type="checkbox">
+                <label asp-for="Section.IsEmpty" class="form-label my-auto size-14">MARCAR TRAMO COMO VACÍO</label>
+            </div>
+        }
+        else
+        {
+            <div class="col-12 d-flex">
+                <input asp-for="Section.IsEmpty" class="form-check my-auto mr-1" type="checkbox" hidden>
+                <label asp-for="Section.IsEmpty" class="form-label my-auto size-14 d-none">MARCAR TRAMO COMO VACÍO</label>
+            </div>
+        }
+
+        @if (!Model.Section.IsEmpty)
+        {
+            <div class="col-6 Section_ClientesId">
+                <label asp-for="Section.ClientesId" class="form-label">CLIENTE</label>
+                <select asp-for="Section.ClientesId" asp-items="Model.Selects.Customers" data-val="true" data-val-required="The Person field is required." class="form-select" onchange="GetCustomerOD(this.value), GetClientReferences(this.value)" required style="width: 100%;"></select>
+            </div>
+
+        }
+
         <div class="col-2">
             <label asp-for="Section.FechaSalida" class="form-label">FECHA DE SALIDA</label>
             <input asp-for="Section.FechaSalida" class="form-control">
@@ -56,48 +73,57 @@
             <label asp-for="Section.Anticipacion" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
             <input asp-for="Section.Anticipacion" class="form-control">
         </div>
-        <div class="col-6">
-            <div class="d-flex justify-content-between">
-                <label asp-for="Section.Cl_Has_OrigenId" class="form-label">ORIGEN</label>
-                <a href="javascript:void(0)" class="text-primary" onclick="showModal('AGREGAR','Agregar', 'origen')">AGREGAR</a>
+
+        @if (!Model.Section.IsEmpty)
+        {
+            <div class="col-6 Cl_Has_OrigenId">
+                <div class="d-flex justify-content-between">
+                    <label asp-for="Section.Cl_Has_OrigenId" class="form-label">ORIGEN</label>
+                    <a href="javascript:void(0)" class="text-primary" onclick="showModal('AGREGAR','Agregar', 'origen')">AGREGAR</a>
+                </div>
+                <select asp-for="Section.Cl_Has_OrigenId" asp-items="Model.Selects.CustomerOrigins" class="form-select" onchange="GetRoute(this.value, 'origin')" style="width: 100%;"></select>
             </div>
-            <select asp-for="Section.Cl_Has_OrigenId" asp-items="Model.Selects.CustomerOrigins" class="form-select" onchange="GetRoute(this.value, 'origin')"></select>
-        </div>
-        <div class="col-6">
-            <label asp-for="Section.Cl_Has_Origen.Direccion" class="form-label">DIRECCIÓN REMITENTE</label>
-            <input asp-for="Section.Cl_Has_Origen.Direccion" type="text" class="form-control" disabled>
-        </div>
-        <div class="col-6">
-            <div class="d-flex justify-content-between">
-                <label asp-for="Section.Cl_Has_DestinosId" class="form-label">DESTINO</label>
-                <a href="javascript:void(0)" class="text-primary" onclick="showModal('AGREGAR','Agregar', 'destino')">AGREGAR</a>
+            <div class="col-6 Cl_Has_OrigenId">
+                <label asp-for="Section.Cl_Has_Origen.Direccion" class="form-label">DIRECCIÓN REMITENTE</label>
+                <input asp-for="Section.Cl_Has_Origen.Direccion" type="text" class="form-control" disabled>
             </div>
-            <select asp-for="Section.Cl_Has_DestinosId" asp-items="Model.Selects.CustomerDestinations" class="form-select" onchange="GetRoute(this.value, 'destination')"></select>
-        </div>
-        <div class="col-6">
-            <label asp-for="Section.Cl_Has_Destinos.Direccion" class="form-label">DIRECCIÓN DESTINATARIO</label>
-            <input asp-for="Section.Cl_Has_Destinos.Direccion" type="text" class="form-control" disabled>
-        </div>
+            <div class="col-6 Cl_Has_DestinosId">
+                <div class="d-flex justify-content-between">
+                    <label asp-for="Section.Cl_Has_DestinosId" class="form-label">DESTINO</label>
+                    <a href="javascript:void(0)" class="text-primary" onclick="showModal('AGREGAR','Agregar', 'destino')">AGREGAR</a>
+                </div>
+                <select asp-for="Section.Cl_Has_DestinosId" asp-items="Model.Selects.CustomerDestinations" class="form-select" onchange="GetRoute(this.value, 'destination')" style="width: 100%;"></select>
+            </div>
+            <div class="col-6 Cl_Has_DestinosId">
+                <label asp-for="Section.Cl_Has_Destinos.Direccion" class="form-label">DIRECCIÓN DESTINATARIO</label>
+                <input asp-for="Section.Cl_Has_Destinos.Direccion" type="text" class="form-control" disabled>
+            </div>
+        }
+
         <div class="col-6">
             <label asp-for="Section.RutaId" class="form-label">RUTA</label>
-            <select asp-for="Section.RutaId" asp-items="Model.Selects.Routes" class="form-select"></select>
+            <select asp-for="Section.RutaId" asp-items="Model.Selects.Routes" class="form-select" style="width: 100%;"></select>
         </div>
         <div class="col-6">
             <label asp-for="Section.SectionTypeId" class="form-label">TIPO DE TRAMO</label>
-            <select asp-for="Section.SectionTypeId" asp-items="Model.Selects.SectionType" class="form-select"></select>
+            <select asp-for="Section.SectionTypeId" asp-items="Model.Selects.SectionType" class="form-select" style="width: 100%;"></select>
         </div>
-        <div class="col-4" id="referencia1">
-            <label asp-for="Section.Referencia1" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
-            <input asp-for="Section.Referencia1" class="form-control">
-        </div>
-        <div class="col-4" id="referencia3">
-            <label asp-for="Section.Referencia2" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
-            <input asp-for="Section.Referencia2" class="form-control">
-        </div>
-        <div class="col-4" id="referencia2">
-            <label asp-for="Section.Referencia3" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
-            <input asp-for="Section.Referencia3" class="form-control">
-        </div>
+
+        @if (!Model.Section.IsEmpty)
+        {
+            <div class="col-4" id="referencia1">
+                <label asp-for="Section.Referencia1" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
+                <input asp-for="Section.Referencia1" class="form-control">
+            </div>
+            <div class="col-4" id="referencia3">
+                <label asp-for="Section.Referencia2" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
+                <input asp-for="Section.Referencia2" class="form-control">
+            </div>
+            <div class="col-4" id="referencia2">
+                <label asp-for="Section.Referencia3" class="form-label">TIEMPO DE ANTICIPACIÓN</label>
+                <input asp-for="Section.Referencia3" class="form-control">
+            </div>
+        }
     </form>
     </div>
 </div>
@@ -105,13 +131,29 @@
 <script>
     $('[type=datetime-local]').map((k, e) => $(e).prop('min', new Date().toISOString().substring(0, 16)));
     $('#Section_Cl_Has_OrigenId, #Section_Cl_Has_DestinosId').trigger('change');
+
     $('#Section_IsEmpty').on('change', e => {
-        const clienteSelect = $('#Section_ClientesId');
+        const customerParams = $('#Section_ClientesId, .Section_ClientesId, #Section_Cl_Has_OrigenId, .Cl_Has_OrigenId, #Section_Cl_Has_DestinosId, .Cl_Has_DestinosId');
         const isChecked = $('#Section_IsEmpty').prop('checked');
-        isChecked ? clienteSelect.prop('disabled', true).hide() : clienteSelect.prop('disabled', false).show();
+        if (isChecked) {
+            customerParams.prop('disabled', true).hide();
+            GetKLSRoutes();
+        } else {
+            $('#Section_RutaId').empty();
+            customerParams.prop('disabled', false).show();
+        }
     });
 
-    @Model.Section.ClientesId > 0 ? GetClientReferences(@Model.Section.ClientesId) : $('#referencia1, #referencia2, #referencia3').hide();
+    $('#sectionform select').map((k, e) => dSelect($(e).attr('id')));
+
+    _SectionIsEmpty = @(Model.Section.IsEmpty ? "true" : "false") ;
+    _CustomerId = @(Model.Section.ClientesId is null ? 0 : Model.Section.ClientesId) ;
+
+    if (!_SectionIsEmpty) {
+        _CustomerId > 0 ? GetClientReferences(_CustomerId) : $('#referencia1, #referencia2, #referencia3').hide();
+    } else {
+        GetKLSRoutes(@Model.Section.RutaId);
+    }
 
     GetSectionServices = async () => {
         try {
