--- a/KLS_WEB/KLS_WEB/Views/Travels/_Log.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Log.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ICollection<KLS_WEB.Models.Travels.SectionLog>
 <div class="col-12">
     <div class="text-left d-flex justify-content-between mb-3">
         <h4>HISTORIAL</h4>
@@ -12,9 +12,23 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td class="text-center" colspan="3">NO HAY REGISTROS QUE MOSTRAR</td>
-            </tr>
+            @if (Model.Any())
+            {
+                foreach (var log in Model)
+                {
+                    <tr>
+                        <td>@log.Registro</td>
+                        <td>@log.Usuario</td>
+                        <td>@log.TimeCreated.ToString("dd/MM/yyyy hh:mm tt")</td>
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
+                    <td class="text-center" colspan="3">NO HAY REGISTROS QUE MOSTRAR</td>
+                </tr>
+            }
         </tbody>
     </table>
 </div>
